<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center_horizontal">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:textAlignment="center"
                android:drawableStart="@drawable/search"
                android:layout_marginTop="40dp"
                android:backgroundTint="#ffffff"
                android:layout_centerHorizontal="true"
                android:background="@drawable/search_view"/>

            <RelativeLayout
                android:id="@+id/linearExplora"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_below="@+id/searchView"
                android:layout_marginTop="20dp"
                android:layout_height="150dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explora"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_marginLeft="15dp"
                    android:textSize="25sp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_Arte"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/arte"
                   android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:layout_marginLeft="25dp"/>

                <TextView
                    android:id="@+id/txt_arte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Arte/Diseño"
                    android:layout_below="@+id/img_Arte"
                    android:textColor="#000000"
                    android:layout_marginLeft="16dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_belleza"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/belleza"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:layout_toRightOf="@+id/img_Arte"
                    android:layout_marginLeft="25dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Belleza"
                    android:layout_below="@+id/img_belleza"
                    android:layout_toRightOf="@id/txt_arte"
                    android:textColor="#000000"
                    android:layout_marginLeft="25dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_mantenimiento"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/mantenimiento"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:layout_toRightOf="@+id/img_belleza"
                    android:layout_marginLeft="25dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mantenimiento"
                    android:layout_below="@+id/img_belleza"
                    android:layout_toRightOf="@id/txt_arte"
                    android:textColor="#000000"
                    android:layout_marginLeft="90dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_hogar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/hogar"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:layout_toRightOf="@+id/img_mantenimiento"
                    android:layout_marginLeft="25dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hogar"
                    android:layout_below="@+id/img_belleza"
                    android:layout_toRightOf="@id/txt_arte"
                    android:textColor="#000000"
                    android:layout_marginLeft="200dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/linearParaMi"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_below="@+id/linearExplora"
                android:layout_marginTop="20dp"
                android:layout_height="150dp">

                <TextView
                    android:id="@+id/para_mi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/para_mi"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_marginLeft="15dp"
                    android:textSize="20sp"/>

                <ImageView
                    android:id="@+id/img_curso"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cursos"
                    android:layout_below="@+id/para_mi"
                    android:layout_marginLeft="10dp"/>

                <ImageView
                    android:id="@+id/img_blog"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/blog"
                    android:layout_toRightOf="@+id/img_curso"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"/>

                <ImageView
                    android:id="@+id/img_voluntarios"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/voluntariado"
                    android:layout_toRightOf="@+id/img_blog"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"/>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/linearYober"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_below="@+id/linearParaMi"
                android:layout_marginTop="20dp"
                android:layout_height="150dp">

                <TextView
                    android:id="@+id/txt_yober"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yobers"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_marginLeft="15dp"
                    android:textSize="20sp"/>

                <ImageView
                    android:id="@+id/img_yober1"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/yober1"
                    android:layout_below="@+id/txt_yober"
                    android:layout_marginLeft="20dp"/>

                <ImageView
                    android:id="@+id/img_yober2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/yober2"
                    android:layout_toRightOf="@+id/img_yober1"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="20dp"/>



            </RelativeLayout>


        </RelativeLayout>


    </ScrollView>









</RelativeLayout>